# ab-testing-tools

./: 01_Sample_Size_Calculate.py  02_AB_Testing.py  About.py  README.md  docker-compose.yml  pyproject.toml
abtools/stats/: sample_size.py
api/: main.py  pyproject.toml
app/: Dockerfile  Home.py  Makefile  pyproject.toml
app/pages/: 01_Sample_Size_Calculator.py  02_AB_Test_Calculator.py
app/src/stats/: frequentist.py  sample_size.py
app/src/utils/: data_parameters.py  model.py  pages.py
nginx/: Dockerfile  nginx.conf
nginx/keys/: see_this_todo_first.md
pages/: 01_Sample_Size_Calculate.py  02_AB_Testing.py
