[tool.poetry]
name = "abtools"
version = "0.1.0"
description = ""
authors = ["yoshinaga0106 <t.yoshinaga0106@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
scipy = ">=1.3,<1.9"
streamlit = "^1.15.0"
statsmodels = ">=0.13.5,<0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
