[tool.poetry]
name = "stats"
version = "0.1.0"
description = ""
authors = ["Takahiro Yoshinaga <t.yoshinaga0106@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
statsmodels = "0.13.5"
fastapi = "^0.87.0"
uvicorn = "^0.20.0"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
